# onecortex-vector

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  lefthook.yml
api/: Cargo.toml
api/migrations/: 0001_catalog_schema.sql  0006_pg_textsearch.sql
api/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
api/tests/: auth_tests.rs  control_plane.rs  data_plane.rs  foundation.rs  hybrid_test.rs  query_tests.rs  reranking_test.rs
deploy/: Dockerfile  docker-compose.yml  init-extensions.sql
deploy/cross-encoder/: README.md
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  filters.md  reranking.md  why-onecortex-vector.md
docs/api-reference/: errors.md
migrations/: 0001_catalog_schema.sql  0002_collections_table.sql  0002_indexes_table.sql  0003_collection_stats_table.sql  0003_index_stats_table.sql  0004_api_keys_table.sql  0006_pg_textsearch.sql  0007_aliases_table.sql  0008_earthdistance.sql  0009_drop_api_keys.sql  0010_collections_embedder.sql
scripts/: commitlint.sh  load_test.py
sdk/python/: README.md  pyproject.toml
sdk/python/onecortex/: __init__.py  _http.py  client.py  exceptions.py  index.py  models.py
sdk/python/tests/integration/: conftest.py  test_live_server.py  test_porting.py
sdk/python/tests/unit/: test_client.py  test_index.py  test_models.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
src/: config.rs  error.rs  http_retry.rs  lib.rs  main.rs  state.rs
src/db/: lifecycle.rs  mod.rs  pool.rs
src/embedding/: cache.rs  cohere.rs  jina.rs  mod.rs  tei.rs  (+3 more)
tests/: admin_tests.rs  alias_tests.rs  auth_tests.rs  control_plane.rs  data_plane.rs  embedding_test.rs  filter_tests.rs  foundation.rs  hybrid_test.rs  query_tests.rs  request_id_test.rs  reranking_test.rs  search_test.rs
(+52 files in other folders)
