[project]
name = "onecortex-vector"
version = "0.1.0"
description = "Python client for Onecortex Vector — self-hosted vector database"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # httpx mock library
]

[tool.hatch.build.targets.wheel]
packages = ["onecortex"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
